[package]
name = "perps_dex"
version = "0.1.0"
description = "perp DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perps_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bytemuck = { version = "1.14", features = ["derive"] }


[dev-dependencies]
solana-program-test = "2.2"
anyhow = "1.0"
